margin fixes to align with figma

--- a/src/component/CaseStudyPage/BrandIdentity/style.css
+++ b/src/component/CaseStudyPage/BrandIdentity/style.css
@@ -1,6 +1,6 @@
 .cs-brandidentity-para-container {
   margin-top: 10vw;
-  margin-left: 10vw;
+  margin-left: 6vw;
   margin-right: 10vw;
   display: flex;
   flex-direction: column;
