--- a/src/component/CaseStudyPage/Team-Container/style.css
+++ b/src/component/CaseStudyPage/Team-Container/style.css
@@ -70,7 +70,6 @@
 }
 
 .cs-title-container {
-  padding-left: 10vw;
   width: 98vw;
 }
 
